# serializer version: 1
# name: Test_Integration_Tests.test_basic_auth_flow
  dict({
    'data': dict({
      'password': 'changeme',
      'ssl_ca_path': None,
      'timeout': 30,
      'url': 'http://basic-auth-flow:9200',
      'username': 'hass_writer',
      'verify_ssl': True,
    }),
    'options': dict({
      'change_detection_enabled': True,
      'change_detection_type': list([
        'STATE',
        'ATTRIBUTE',
      ]),
      'excluded_domains': list([
      ]),
      'excluded_entities': list([
      ]),
      'included_domains': list([
      ]),
      'included_entities': list([
      ]),
      'polling_frequency': 60,
      'publish_frequency': 60,
    }),
  })
# ---
# name: Test_Integration_Tests.test_no_auth_flow_isolate
  dict({
    'data': dict({
      'ssl_ca_path': None,
      'timeout': 30,
      'url': 'http://minimum-fields:9200',
      'verify_ssl': True,
    }),
    'options': dict({
      'change_detection_enabled': True,
      'change_detection_type': list([
        'STATE',
        'ATTRIBUTE',
      ]),
      'excluded_domains': list([
      ]),
      'excluded_entities': list([
      ]),
      'included_domains': list([
      ]),
      'included_entities': list([
      ]),
      'polling_frequency': 60,
      'publish_frequency': 60,
    }),
  })
# ---
